--- a/index.html
+++ b/index.html
@@ -3,49 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Amine ALLICHE</title>
 </head>
 <body>
     <header>
         <div class="parts">
-            <a href="">home</a>
-            <a href="">my work</a>
-            <a href="">full cv</a>
+            <a href="#home">home</a>
+            <a href="https://www.behance.net/mralliche" target="_blank">my work</a>
+            <a href="CV-Amine-Alliche-@mralliche.pdf" target="_blank">full cv</a>
             <a href="#contact">let's  talk</a>
         </div>
         
         <div class="creation">
             <img src="img/messenger.png">
-            <p>LET’S Create something amazing together !</p>
+            <a href="#contact" style="text-decoration: none; color: white;"><p style="text-transform: uppercase;">LET’S Create something amazing together !</p></a>
         </div>
     </header>
         <!-- 1er div-->
     <div id="home" class="div1">
         <div class="div11">
             <span class="span1">HEY, I’M</span><br><span class="span2">AMINE ALLICHE  </span><br>
-            <img src="img/trait.png"><br>
+            <img src="img/trait.png" width="74%"><br>
             <div class="disc">A <span style="color: #00ffff;font-weight: bold;">Graphic Designer</span> with a passion<br> for creating visually appealing and<br> effective designs.</div>
         </div>
-        <!--<img src="img/Rectangle 8.png" class="rect8">-->
+        <img src="img/Rectangle 8.png" class="rect8">
         <div class="div111">
             <img src="img/Amine-allichz-web-site 1.png" width="630">
         </div>
         <div class="div14">
             <span>Find me on</span>
             <div class="div15">
-                <div><img src="img/Vector.png" alt="LinkedIn"></div>
-                <div><img src="img/behance.png" alt="Behance"></div>
-                <div><img src="img/instagram.png" alt="Instagram"></div>
+                <div><a href="https://www.linkedin.com/in/mrallichedesign/?locale=fr_FR" target="_blank"><img src="img/Vector.png" alt="LinkedIn"></a></div>
+                <div><a href="https://www.behance.net/mralliche" target="_blank"><img src="img/behance.png" alt="Behance"></a></div>
+                <div><a href="https://www.instagram.com/mralliche/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a></div>
             </div>
         </div>
     </div>
         <!-- 1er div-->
 
-        <img src="img/My_Skills_bar.png" style="background-color: black;">
+        <img class="skills-bar" src="img/My_Skills_bar.png">
 
         <!-- 2eme div-->
         <div class="skills-container">
@@ -81,13 +82,35 @@
                     <span> Speaking in public</span>
                 </div>
             </div>
-        <img src="img/Ellipse 1.png" class="ellipse">
+        <div class="ellipse"><img src="img/Ellipse 1.png"></div>
         </div>
         <!-- fin du 2eme div-->
 
 
 
         <!-- 3eme div-->
+        <div id="carouselExampleFade" class="carousel slide carousel-fade ">
+            <div class="carousel-inner pt-5">
+            <div class="carousel-item active d-flex justify-content-center">
+                <img src="img/Group 2 (1).png" class="d-block " >
+            </div>
+            <div class="carousel-item d-flex justify-content-center">
+                <img src="img/Group 2.png" class="d-block " >
+            </div>
+            <div class="carousel-item d-flex justify-content-center">
+                <img src="img/Group 3.png" class="d-block ">
+            </div>
+            </div>
+            <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color: black;border-radius: 50%;"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next " type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: black;border-radius: 50%;"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="linkedin"><img src="img/Group.png"></div>
         <!-- fin du 3eme div-->
 
 
@@ -109,7 +132,9 @@
         <!-- footer-->
         <footer>
             <p>Ratio Algérie - &copy; Reserved 2024 | Coded By <a href="#">Recay</a></p>
+            <a href="#home"><img src="img/icons8-flèche-haut-50.png" ></a>
         </footer>
         <!-- fin footer-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
