--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Amine ALLICHE</title>
 </head>
@@ -26,18 +28,18 @@
     </header>
         <!-- 1er div-->
     <div id="home" class="div1">
-        <div class="div11">
+        <div class="div11" data-aos="fade-down-right">
             <span class="span1">HEY, I’M</span><br><span class="span2">AMINE ALLICHE  </span><br>
             <img src="img/trait.png" width="74%"><br>
             <div class="disc">A <span style="color: #00ffff;font-weight: bold;">Graphic Designer</span> with a passion<br> for creating visually appealing and<br> effective designs.</div>
         </div>
         <img src="img/Rectangle 8.png" class="rect8">
-        <div class="div111">
+        <div class="div111" >
             <img src="img/Amine-allichz-web-site 1.png" width="630">
         </div>
         <div class="div14">
-            <span>Find me on</span>
-            <div class="div15">
+            <div class="div144" data-aos="fade-left">Find me on</div>
+            <div class="div15" data-aos="fade-up">
                 <div><a href="https://www.linkedin.com/in/mrallichedesign/?locale=fr_FR" target="_blank"><img src="img/Vector.png" alt="LinkedIn"></a></div>
                 <div><a href="https://www.behance.net/mralliche" target="_blank"><img src="img/behance.png" alt="Behance"></a></div>
                 <div><a href="https://www.instagram.com/mralliche/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a></div>
@@ -51,33 +53,33 @@
         <!-- 2eme div-->
         <div class="skills-container">
             <div class="skills">
-                <div class="skills-plan">
+                <div class="skills-plan" data-aos="flip-up">
                     <img src="img/done.png">
                     <span>Social Media Design</span>
                 </div>
-                <div class="skills-plan">
+                <div class="skills-plan" data-aos="flip-up">
                     <img src="img/done.png">
                     <span>Print Design</span>
                 </div>
-                <div class="skills-plan">
+                <div class="skills-plan" data-aos="flip-up">
                     <img src="img/done.png">
                     <span>Brand Design</span>
                 </div>
-                <div class="skills-plan">
+                <div class="skills-plan" data-aos="flip-up">
                     <img src="img/done.png">
                     <span>Web Design</span>
                 </div>
             </div>
             <div class="skills1">
-                <div class="skills-plan">
+                <div class="skills-plan" data-aos="flip-down">
                     <img src="img/done.png">
                     <span>Leadership</span>
                 </div>
-                <div class="skills-plan">
+                <div class="skills-plan" data-aos="flip-down">
                     <img src="img/done.png">
                     <span>Teamwork</span>
                 </div>
-                <div class="skills-plan">
+                <div class="skills-plan" data-aos="flip-down">
                     <img src="img/done.png">
                     <span> Speaking in public</span>
                 </div>
@@ -91,14 +93,14 @@
         <!-- 3eme div-->
         <div id="carouselExampleFade" class="carousel slide carousel-fade ">
             <div class="carousel-inner pt-5">
-            <div class="carousel-item active d-flex justify-content-center">
-                <img src="img/Group 2 (1).png" class="d-block " >
+            <div class="carousel-item active d-flex justify-content-center" >
+                <img src="img/Group 2 (1).png" class="d-block " data-aos="zoom-in-down">
             </div>
             <div class="carousel-item d-flex justify-content-center">
-                <img src="img/Group 2.png" class="d-block " >
+                <img src="img/Group 2.png" class="d-block " data-aos="zoom-in-down">
             </div>
             <div class="carousel-item d-flex justify-content-center">
-                <img src="img/Group 3.png" class="d-block ">
+                <img src="img/Group 3.png" class="d-block " data-aos="zoom-in-down">
             </div>
             </div>
             <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -110,13 +112,18 @@
             <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="linkedin"><img src="img/Group.png"></div>
+        <div class="linkedin"><img src="img/Group.png" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="3000"></div>
         <!-- fin du 3eme div-->
 
 
         <!-- 4eme div-->
         <div id="contact" class="ccontainer">
-            <h1 class="">Let's create something amazing together!</h1>
+            <h1>Let's create something amazing together!</h1>
+            <div data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="3000">
             <form>
                 <input type="text" id="firstName" required placeholder="First Name">
                 <input type="text" id="lastName" required placeholder="Last Name">
@@ -126,6 +133,7 @@
                 <textarea required></textarea>
                 <input type="submit" value="Send" id="btt">
             </form>
+            </div>
         </div>
         <!-- fin du 4eme div-->
 
@@ -135,6 +143,9 @@
             <a href="#home"><img src="img/icons8-flèche-haut-50.png" ></a>
         </footer>
         <!-- fin footer-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script>
+            AOS.init();
+        </script>
+    </body>
 </html>
