--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Amine ALLICHE</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="parts">
             <a href="#home">home</a>
             <a href="https://www.behance.net/mralliche" target="_blank">my work</a>
@@ -140,7 +140,7 @@
         <!-- footer-->
         <footer>
             <p>Ratio Algérie - &copy; Reserved 2024 | Coded By <a href="#">Recay</a></p>
-            <a href="#home"><img src="img/icons8-flèche-haut-50.png" ></a>
+            <a href="#header"><img src="img/icons8-flèche-haut-50.png" ></a>
         </footer>
         <!-- fin footer-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
