--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="linkedin"><img src="img/Group.png" data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
-            data-aos-duration="3000"></div>
+            data-aos-duration="2700"></div>
         <!-- fin du 3eme div-->
 
 
@@ -123,7 +123,7 @@
             <h1>Let's create something amazing together!</h1>
             <div data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
-            data-aos-duration="3000">
+            data-aos-duration="2700">
             <form>
                 <input type="text" id="firstName" required placeholder="First Name">
                 <input type="text" id="lastName" required placeholder="Last Name">
@@ -139,7 +139,7 @@
 
         <!-- footer-->
         <footer>
-            <p>Ratio Algérie - &copy; Reserved 2024 | Coded By <a href="#">Recay</a></p>
+            <p>Ratio Algérie - &copy; Reserved 2024 | Coded By <a href="https://www.linkedin.com/in/okba-moulahoum-848769298/" target="_blank">Recay</a></p>
             <a href="#header"><img src="img/icons8-flèche-haut-50.png" ></a>
         </footer>
         <!-- fin footer-->
