--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- 1er div-->
     <div id="home" class="div1">
-        <div class="div11" data-aos="fade-down-right">
+        <div class="div11">
             <span class="span1">HEY, I’M</span><br><span class="span2">AMINE ALLICHE</span><br>
             <img src="img/trait.png" width="74%"><br>
             <div class="disc">A <span style="color: #00ffff;font-weight: bold;">Graphic Designer</span> with a passion<br> for creating visually appealing and<br> effective designs.</div>
@@ -96,8 +96,8 @@
     <!-- fin du 2eme div-->
 
     <!-- 3eme div-->
-    <div class="linkedin"><img src="img/Group.png" data-aos="zoom-in-down"></div>
-    <div class="r-cont swiper mySwiper">
+    
+    <div class="r-cont swiper mySwiper"><div class="linkedin"><img src="img/Group.png" data-aos="zoom-in-down"></div>
         <div class="r-i-cont swiper-wrapper">
             <div class="swiper-slide"><img src="img/Group 2 (1).png"></div>
             <div class="swiper-slide"><img src="img/Group 2.png"></div>
@@ -118,7 +118,7 @@
     <!-- 4eme div-->
     <div id="contact" class="ccontainer">
         <h1>Let's create something amazing together!</h1>
-        <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2700">
+        <div data-aos="zoom-in-down">
             <form>
                 <input type="text" id="firstName" required placeholder="First Name">
                 <input type="text" id="lastName" required placeholder="Last Name">
